# huffman

./: .gitignore  CMakeLists.txt  Encode.txt  huffman.cpp  huffman.h  huffman.ui  main.cpp  original.txt
